--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-pandas==1.5.3
-numpy==1.23.5
 streamlit==1.38.0
-matplotlib==3.6.3
-plotly==5.24.1
-scikit-learn==1.2.2
-joblib==1.2.0
-pyarrow==11.0.0
-pycaret==3.1.0
-seaborn==0.12.2
+pycaret==3.3.2
+scikit-learn==1.3.2
+pandas==2.1.4
+numpy==1.26.4
+matplotlib==3.8.3
+seaborn==0.13.2
+plotly==5.18.0
+joblib==1.3.2
+tqdm==4.66.2
+requests==2.31.0
+markupsafe==2.1.5
+jinja2==3.1.3
