--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 streamlit==1.38.0
-pycaret==3.3.2
-scikit-learn==1.3.2
-pandas==2.1.4
-numpy==1.26.4
-matplotlib==3.8.3
-seaborn==0.13.2
-plotly==5.18.0
-joblib==1.3.2
-tqdm==4.66.2
-requests==2.31.0
-markupsafe==2.1.5
-jinja2==3.1.3
+pycaret==3.2.0
+scikit-learn==1.2.2
+numpy==1.23.5
+pandas==1.5.3
+scipy==1.10.1
+matplotlib==3.7.1
+seaborn==0.12.2
+plotly==5.14.1
+joblib==1.2.0
+tqdm==4.65.0
+jinja2==3.1.2
+markupsafe==2.1.3
