--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
+# ============================================
+# Ambiente compatível com Streamlit Cloud + PyCaret 3.2.0
+# ============================================
+
 streamlit==1.38.0
 pycaret==3.2.0
+
+# Dependências estáveis e 100 % compatíveis
 scikit-learn==1.2.2
 numpy==1.23.5
 pandas==1.5.3
 scipy==1.10.1
-matplotlib==3.6.3
+matplotlib==3.6.0
 seaborn==0.12.2
 plotly==5.14.1
 joblib==1.2.0
 tqdm==4.65.0
+
+# Ajustes de template e segurança
 jinja2==3.1.2
 markupsafe==2.1.3
